# mpc_save_report_definition

./: .env.example  .gitignore  CLAUDE.md  COPILOT_EXAMPLE_RUN.md  COPILOT_EXAMPLE_RUN_REASONING.md  README.md  TUTORIAL_CLINICAL_ENCOUNTERS.md  VIEWING_DATA.md  conftest.py  pyproject.toml
.github/: copilot-instructions.md
data/: seed.py
data/queries/: tn_monthly_encounters.sql
runner/: __init__.py  regenerate.py  render.py
scripts/: analyze_meta_probe.py  demo_free_form.py  demo_market_story.py  demo_session.py  market_queries.py  preview_artifact.py  servers.ps1
server/: __init__.py  artifact.py  call_log.py  compiler.py  correlation.py  db.py  env.py  extraction_cache.py  extractor.py  fingerprint.py  intent_catalog.py  knowledge_graph.py  linter.py  main.py  normalizer.py  observability.py  parity.py  reasoning.py  registry.py  temporal.py  tools.py
templates/: report_base.html.j2
templates/layouts/: tabbed_dashboard.html.j2
templates/runtime/: charts_v1.js
templates/themes/: market_story_v1.css
tests/: test_artifact.py  test_bindings_reasoning.py  test_compiler_v2.py  test_correlation.py  test_editorial.py  test_end_to_end.py  test_end_to_end_free_form.py  test_end_to_end_market.py  test_extractor.py  test_fingerprint.py  test_hca_clinical_seed.py  test_marketshare_seed.py  test_mcp_boundary.py  test_normalizer.py  test_parity.py  test_parity_v2.py  test_render_v2.py  test_save_confirmation.py  test_temporal.py
