[project]
name = "report-regen-poc"
version = "0.1.0"
description = "Local, cloud-free POC of re-generatable reports with a dummy MCP server"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "duckdb>=1.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
