[project]
name = "report-regen-poc"
version = "0.1.0"
description = "Local, cloud-free POC of re-generatable reports with a dummy MCP server"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "duckdb>=1.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
# pytest for the suite; harlequin is a terminal DuckDB browser for poc.duckdb
# (run `harlequin -r data/poc.duckdb` with the MCP server stopped).
dev = ["pytest>=8.0", "harlequin>=1.0"]
# Optional LLM-backed reasoning engine (opt-in via POC_REASONING=anthropic).
llm = ["anthropic>=0.69"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
