[project]
name = "report-regen-poc"
version = "0.1.0"
description = "Local, cloud-free POC of re-generatable reports with a dummy MCP server"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "duckdb>=1.0",
    "jinja2>=3.1",
    # Parses the v2 artifact contract. The compiler locates nodes with bs4 and
    # splices the original source at their offsets, so it needs the source-position
    # tracking html.parser provides (bs4 >= 4.8.1).
    "beautifulsoup4>=4.8.1",
]

[project.optional-dependencies]
# pytest for the suite; harlequin is a terminal DuckDB browser for poc.duckdb
# (run `harlequin -r data/poc.duckdb` -- read-only, so it coexists with the server).
dev = ["pytest>=8.0", "harlequin>=1.0"]
# Optional LLM-backed reasoning engine (opt-in via POC_REASONING=anthropic).
llm = ["anthropic>=0.69"]

# The importable packages. Declared explicitly because the repo also has
# non-package top-level dirs (data/, scripts/, tests/, templates/), which would
# otherwise make setuptools' flat-layout auto-discovery ambiguous and fail.
[tool.setuptools.packages.find]
include = ["server*", "runner*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
